# sourmash_plugin_betterplot

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: build-test.yml
examples/: 10sketches.cmp  10sketches.cmp.1.csv  10sketches.cmp.2.csv  10sketches.cmp.3.csv  10sketches.cmp.4.csv  10sketches.cmp.5.csv  10sketches.cmp.6.csv  10sketches.cmp.labels.txt  3sketches.cmp  3sketches.cmp.labels.txt  3sketches.cmp.labels_to.csv  64sketches.cmp  64sketches.cmp.labels_to.csv  64sketches.pairwise.cluster_sizes.txt  64sketches.pairwise.clusters.cats.csv  64sketches.pairwise.clusters.csv  64sketches.pairwise.csv  Makefile  Snakefile  disttree10sketches.matrix.nwk  disttree10sketches.pairwise.nwk  tsne2.64sketches.cmp  tsne2.64sketches.labels.csv
examples/sketches/: 10sketches-categories.csv
examples/tax/: SRR11125891.gather.with-lineages.csv  SRR11125891.t0.lineages.json  SRR606249.x.podar.with-lineages.csv  test.gather.with-lineages.csv  test.tax-mg.summarized.csv
src/: sourmash_plugin_betterplot.py
tests/: conftest.py  sourmash_tst_utils.py  test_betterplot_plugin.py
tests/test-data/: 10sketches.cmp.labels_to.csv  10sketches.pairwise.csv  SRR29654720_k31_gather.summarized-lingroups.csv  SRR29654720_k31_gather.summarized.no-lingroups.csv  SRR29654720_k31_gather.with-lineages.csv  ralstonia_lingroups.csv
