[project]
name = "sourmash_plugin_betterplot"
description = "sourmash plugin for improved plotting/viz and cluster examination."
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.1"

dependencies = ["sourmash>=4.8.8,<5",
                "matplotlib", "numpy", "scipy", "scikit-learn", "seaborn"]

[metadata]
license = { text = "BSD 3-Clause License" }

[project.entry-points."sourmash.cli_script"]
plot2_command = "sourmash_plugin_betterplot:Command_Plot2"
plot3_command = "sourmash_plugin_betterplot:Command_Plot3"
mds_command = "sourmash_plugin_betterplot:Command_MDS"
mds2_command = "sourmash_plugin_betterplot:Command_MDS2"
pairwise_to_compare_command = "sourmash_plugin_betterplot:Command_PairwiseToCompare"
